# echo

./: .gitignore  README.md  architecture.drawio  package-lock.json  pyproject.toml  script.js
app/: schemas.py
app/routers/: dashboard.py  friends.py  orders.py  payments.py  users.py
backend/: pyproject.toml
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  dashboard.py  event.py  friends.py  orders.py  payments.py  story.py  users.py
backend/templates/: dashboard.html  payment_confirm.html  story.html  story_loading.html
model/: main.py
templates/: dashboard.html  index.html  login.html  payment.html  story_loading.html
ui/: package-lock.json
