[tool.poetry]
name = "yiching"
version = "0.1.0"
description = "AI Fortune Teller"
authors = ["jiajiabinx"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
torch = "^2.5.1"
numpy = ">=1.26.0,<2.1.0"
tensorflow = "^2.18.0"
sentence-transformers = "^3.3.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
asyncpg = "^0.30.0"
anthropic = "^0.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
