[tool.poetry]
name = "yiching"
version = "0.1.0"
description = "AI Fortune Teller"
authors = ["jiajiabinx"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
numpy = ">=1.26.0,<2.1.0"
tensorflow = "^2.18.0"
sentence-transformers = "^3.3.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
asyncpg = "^0.30.0"
pinecone = "^5.4.2"
datasets = "^3.2.0"
tenacity = "^9.0.0"
ray = "^2.41.0"
google = "^3.0.0"
googleapis-common-protos = "^1.66.0"
grpcio-tools = "^1.70.0"
protoc-gen-openapiv2 = "^0.0.1"
cohere = "^5.13.11"
accelerate = "^1.3.0"
openai = "^1.60.1"
wikipedia-api = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
