[tool.poetry]
name = "echo"
version = "0.1.0"
description = "AI fortune teller"
authors = ["blackbear <zoeytu0919@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
jinja2 = "^3.1.5"
openai = "^1.60.2"
cohere = "^5.13.11"
pinecone = "^5.4.2"
google-api = "^0.1.12"
protobuf = "^5.29.3"
googleapis-common-protos = "^1.66.0"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"
protoc-gen-openapiv2 = "^0.0.1"
wikipedia-api = "^0.8.1"
absl-py = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
